:bug: WIP fix backdrop issue on small vertical space

--- a/gsa-frontend/src/styles.scss
+++ b/gsa-frontend/src/styles.scss
@@ -6,6 +6,10 @@
 
 @import "reactome-table";
 
+.ngx-ui-tour_backdrop {
+  max-height: 100vh;
+  max-width: 100vw;
+}
 html, body {
   max-height: 100vh;
 }
